# paper

./: .gitignore  LICENSE  README.md
artifact/vipragsent-repro/: .env.example  .gitignore  Duy_Duc.xlsx  Duy_Duc_synced-1.xlsx  HUMAN_ACTIONS.md  NEW_EXPERIMENT_INTEGRATION_CHECKPOINT.md  NEW_EXPERIMENT_VALIDATION_REPORT.md  Nhat_Khang.xlsx  Nhat_Khang_synced-1.xlsx  Quynh_Nhu.xlsx  Quynh_Nhu_synced-1.xlsx  README.md  RUNBOOK_H100_20GB.md  STALE_CLAIM_AUDIT.md  pyproject.toml  requirements.txt
artifact/vipragsent-repro/answer/: LICENSE  README.md  THIRD_PARTY_NOTICES.md
artifact/vipragsent-repro/cards/: hf_experiment_checkpoints.md  hf_sailor_7b_qlora.md  hf_vistral_7b_qlora.md
artifact/vipragsent-repro/configs/: artifact_registry.json  artifacts.yaml  data_governance.yaml  datasets.yaml  evaluation.yaml  experiments_p0_p1_p2.yaml  experiments_q1.yaml  experiments_q2.yaml  experiments_q3.yaml  experiments_q4.yaml  labels.yaml  models.yaml  paths.yaml  training_h100_20gb.yaml  training_local.yaml
artifact/vipragsent-repro/docs/: annotation_guidelines_v1.md  external_dataset_access_and_license_status.md  permission_register.md
artifact/vipragsent-repro/figures/: README.md
artifact/vipragsent-repro/manuscript/: ABSTRACT_AUDIT.md  CITATION_LEDGER.md  DETAILED_OUTLINE.md  DRAFTING_STATE.md  EVIDENCE_MAP.md  OPEN_ISSUES.md  PAPER_PLAN.md  README.md  SECTION_01_TRACEABILITY.md  SECTION_02_TRACEABILITY.md  SECTION_03_TRACEABILITY.md  references.bib
artifact/vipragsent-repro/results/: annotation_agreement.json  artifact_index.json  calibration.json  claim_ledger.csv  (+11 more)
(+1080 files in other folders)
